--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:contract": "npx hardhat test"
   },
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.4",
@@ -26,10 +27,18 @@
     "web3modal": "^1.9.5"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.0",
+    "@types/chai-as-promised": "^7.1.4",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^17.0.8",
     "autoprefixer": "^10.4.2",
+    "chai-as-promised": "^7.1.1",
+    "dotenv-flow": "^3.2.0",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.8",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.13"
+    "tailwindcss": "^3.0.13",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   }
 }
